[package]
name = "iot-comm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
half = "1.8.2"
zmq = "0.9"
nanoid = "0.4.0"

[[bin]]
name = "broker"
path = "src/broker/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
